src/pages/Home.css
/* ... */
.home-e-245:hover {
    border-color: var(--vId-color-token-a) var(--vId-color-token-a) var(--vId-color-token-a) var(--vId-color-token-a)
}

.home-e-226:hover {
    background-color: var(--vId-color-token-b)
}

.home-e-275::-moz-placeholder {
    color: #667085
}

.home-e-275::placeholder {
    color: #667085
}

.home-e-277::-moz-placeholder {
    color: #667085
}

.home-e-277::placeholder {
    color: #667085
}

.home-e-280::-moz-placeholder {
    color: #667085
}

.home-e-280::placeholder {
    color: #667085
}

.home-e-282::-moz-placeholder {
    color: #667085
}

.home-e-282::placeholder {
    color: #667085
}

.home-e-269::-moz-placeholder {
    color: #667085
}

.home-e-269::placeholder {
    color: #667085
}

.home-e-271::-moz-placeholder {
    color: #0000007f
}

.home-e-271::placeholder {
    color: #0000007f
}

.home-e-6::-moz-placeholder {
    color: var(--vId-f5349128-5a77-4a53-bca0-7dcbd3b7c256)
}

.home-e-6::placeholder {
    color: var(--vId-f5349128-5a77-4a53-bca0-7dcbd3b7c256)
}

.home-e-315:hover {
    background-color: var(--vId-color-token-b)
}

.home-e-326:hover {
    background-color: var(--vId-color-token-b)
}

.home-e-320:hover {
    background-color: var(--vId-color-token-b)
}

.home-e-333:hover {
    background-color: var(--vId-color-token-b)
}

.home-e-339:hover {
    background-color: var(--vId-color-token-b)
}

.home-e-337:hover {
    background-color: var(--vId-color-token-b)
}

.home-e-335:hover {
    background-color: var(--vId-color-token-b)
}

.home-e-1 {
    padding: 0px 0px 0px 0px;
    flex-direction: column;
    align-items: center;
    background-color: var(--vId-color-token-c);
    background-image: url(/assets/template-asset-ee8cf533);
    background-position: 100% 0%;
    background-size: contain;
    background-repeat: no-repeat no-repeat;
    background-attachment: scroll;
    background-clip: border-box;
    background-origin: padding-box;
    z-index: 10;
    margin-left: auto;
    height: auto;
    width: 100%;
    display: flex;
    margin-right: auto;
    max-width: 1980px;
    min-height: 700px;
    position: relative
}

.home-e-283 {
    padding: 0px 0px 0px 0px;
    flex-direction: column;
    align-items: center;
    transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) translateZ(0px);
    height: auto;
    width: 100%;
    display: flex;
    margin-right: auto;
    position: relative
}

.home-e-284 {
    padding: 0px 16px 0px 16px;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    border-width: 0px 0px 0px 0px;
    border-style: none none solid none;
    border-color: transparent transparent #e8e8e8 transparent;
    z-index: 1000;
    height: auto;
    width: 100%;
    display: flex;
    margin-right: NaNpx;
    max-width: none;
    min-height: 130px;
    position: relative
}

.home-e-285 {
    padding: 30px 0px 30px 0px;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) translateZ(0px);
    border-width: 0px 0px 1px 0px;
    border-style: none none solid none;
    border-color: transparent transparent #e8e8e8 transparent;
    height: auto;
    width: 100%;
    display: flex;
    margin-right: NaNpx;
    max-width: 1150px;
    position: relative
}

.home-e-296 {
    padding: 0px 0px 0px 0px;
    flex-direction: row;
    align-items: center;
    -moz-column-gap: 4px;
         column-gap: 4px;
    height: auto;
    width: 180px;
    display: flex;
    min-width: 33%;
    position: relative
}

.home-e-297 {
    -o-object-fit: contain;
       object-fit: contain;
    width: 80px;
    height: -moz-fit-content;
    height: fit-content;
    position: relative;
    max-width: 600px;
    max-height: 600px
}

.home-e-298 {
    font-family: var(--vId-font-token-a);
    font-size: 30px;
    font-weight: 400;
    color: var(--vId-color-token-a);
    line-height: 40px;
    padding: 0px 0px 1px;
    text-align: left;
    opacity: 100%;
    z-index: 1;
    width: -moz-fit-content;
    width: fit-content;
    height: -moz-fit-content;
    height: fit-content;
    display: block;
    min-height: 10px;
    min-width: 16px;
    position: relative;
    max-width: -moz-fit-content;
    max-width: fit-content
}

.home-e-293 {
    padding: 0px 0px 0px 0px;
    color: #111111ff;
    text-align: left;
    font-size: 30px;
    width: -moz-fit-content;
    width: fit-content;
    height: -moz-fit-content;
    height: fit-content;
    min-width: 10px;
    min-height: 10px;
    display: none;
    position: relative
}

.home-e-286 {
    padding: 15px 0px 15px 0px;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    -moz-column-gap: 50px;
         column-gap: 50px;
    transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) translateZ(0px);
    border-width: 0px 0px 0px 0px;
    border-style: none none solid none;
    border-color: transparent transparent #e8e8e8 transparent;
    z-index: 3500;
    height: auto;
    width: -moz-fit-content;
    width: fit-content;
    display: flex;
    margin-right: NaNpx;
    max-width: 1150px;
    position: relative
}

.home-e-294 {
    padding: 10px 10px 10px 10px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 100% 100% 100% 100%;
    border-width: 0px 0px 0px 0px;
    border-style: solid solid solid solid;
    border-color: #e8e8e8 #e8e8e8 #e8e8e8 #e8e8e8;
    height: 70px;
    width: 70px;
    display: none;
    position: relative
}

.home-e-295 {
    padding: 0px 0px 0px 0px;
    color: #ffffffff;
    text-align: left;
    font-size: 30px;
    width: -moz-fit-content;
    width: fit-content;
    height: -moz-fit-content;
    height: fit-content;
    min-width: 10px;
    min-height: 10px;
    display: block;
    position: relative
}
/* ... */

